Fix blinking on visible markers during filerting

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,3 +19,10 @@ body {
   height: 500px;
   width: 700px;
 }
+
+.list-item {
+  list-style: none;
+  cursor: pointer;
+  padding: 2px;
+  margin: 6px 0;
+}
